--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/s-baral/proptrove.io/issues"
   },
   "homepage": "https://github.com/s-baral/proptrove.io#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
